fix: prevent buttons from wrapping

--- a/day1039-tabbed-view/css/carousel.css
+++ b/day1039-tabbed-view/css/carousel.css
@@ -63,6 +63,7 @@ button {
 
 .carousel--step-btn-wrap {
   margin-left: auto;
+  min-width: fit-content;
 }
 
 .carousel--step-btn {
